some types and add memo

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -205,6 +205,20 @@ body {
             display: none;
           }
         }
+
+        &:disabled {
+          opacity: 0.4;
+          transform: none;
+
+          &:hover {
+          background-color: transparent;
+          }
+
+          svg path {
+            fill: #787878
+          }
+        }
+
       }
 
       b {
